<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/friends_list_fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="contentDescription" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="13dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:src="@drawable/tab_icon_search_normal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="6dp"
            android:hint="@string/et_friends_search_hint"
            android:textSize="16sp"
            android:textColorHint="@color/edittext_hint_text_color"
            android:background="@drawable/edittext_friends_search_backgrount" />
    </LinearLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/divider_line_color"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginLeft="13dp"
        android:gravity="center_vertical"
        android:text="@string/my_profile"
        android:textColor="@color/my_profile_text_color"
        android:textSize="11sp" />
    
    <include
        android:id="@+id/friend_item_my_profile" 
        layout="@layout/friend_item"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/divider_line_color"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginLeft="13dp"
        android:gravity="center_vertical"
        android:text="@string/friend"
        android:textColor="@color/my_profile_text_color"
        android:textSize="11sp" />

</LinearLayout>
