<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res/com.kakao.example.android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_title" 
        android:layout_height="44dip"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="#493334">
        <TextView 
            android:id="@+id/text_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="14dip"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
      	<TextView 
            android:id="@+id/text_title_friend_num"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="4dip"
            android:textColor="@color/brand_yellow"
            android:textSize="17sp"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:orientation="horizontal"
            >
            <ImageButton
                android:id="@+id/imagebutton_edit"
                android:layout_width="48dip"
                android:layout_height="48dip"
                android:background="@android:color/transparent"
                android:contentDescription="@string/imagebutton_edit"
                android:clickable="true"
                android:visibility="gone"
                android:src="@drawable/imagebutton_edit" />
            <ImageButton
                android:id="@+id/imagebutton_settings"
                android:layout_width="48dip"
                android:layout_height="48dip"
                android:background="@android:color/transparent"
                android:contentDescription="@string/imagebutton_settings"
                android:clickable="true"
                android:visibility="gone"
                android:src="@drawable/imagebutton_settings" />
            <ImageButton
                android:id="@+id/imagebutton_new_chat"
                android:layout_width="48dip"
                android:layout_height="48dip"
                android:background="@android:color/transparent"
                android:contentDescription="@string/imagebutton_new_chat"
                android:clickable="true"
                android:visibility="gone"
                android:src="@drawable/imagebutton_new_chat" />

        </LinearLayout>
    </LinearLayout>
    <com.kakao.example.android.widget.PagerSlidingTabStrip
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="54dip"
        android:background="@color/tab_background_color"
        custom:pstsIndicatorHeight="6dp"
        custom:pstsUnderlineHeight="2dp"
        custom:pstsTabPaddingLeftRight="24dp"
        custom:pstsScrollOffset="52dp"
        custom:pstsTabBackground="@drawable/tab_background"
        >
	</com.kakao.example.android.widget.PagerSlidingTabStrip>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context=".MainActivity" />
    
</LinearLayout>